fix: swagger comments and add list publications by user id integration tests
